--- a/package.json
+++ b/package.json
@@ -5,28 +5,28 @@
   "version": "0.1.0",
   "author": "Józef Piecyk<jozollo@gmail.com>",
   "dependencies": {
-    "eslint-config-react-app": "^5.0.1",
-    "gatsby": "^2.15.16",
-    "gatsby-image": "^2.2.19",
-    "gatsby-plugin-layout": "^1.1.21",
-    "gatsby-plugin-react-helmet": "^3.1.7",
-    "gatsby-plugin-sharp": "^2.2.22",
-    "gatsby-plugin-styled-components": "^3.1.5",
-    "gatsby-remark-copy-linked-files": "^2.1.19",
-    "gatsby-remark-images": "^3.1.22",
-    "gatsby-remark-prismjs": "^3.3.13",
-    "gatsby-remark-responsive-iframe": "^2.2.16",
-    "gatsby-source-filesystem": "^2.1.22",
-    "gatsby-transformer-remark": "^2.6.22",
-    "gatsby-transformer-sharp": "^2.2.14",
-    "prismjs": "^1.17.1",
-    "react": "^16.9.0",
-    "react-dom": "^16.9.0",
-    "react-helmet": "^5.2.1",
-    "styled-components": "^4.3.2"
+    "eslint-config-react-app": "5.0.1",
+    "gatsby": "2.15.16",
+    "gatsby-image": "2.2.19",
+    "gatsby-plugin-layout": "1.1.21",
+    "gatsby-plugin-react-helmet": "3.1.7",
+    "gatsby-plugin-sharp": "2.2.22",
+    "gatsby-plugin-styled-components": "3.1.5",
+    "gatsby-remark-copy-linked-files": "2.1.19",
+    "gatsby-remark-images": "3.1.22",
+    "gatsby-remark-prismjs": "3.3.13",
+    "gatsby-remark-responsive-iframe": "2.2.16",
+    "gatsby-source-filesystem": "2.1.22",
+    "gatsby-transformer-remark": "2.6.22",
+    "gatsby-transformer-sharp": "2.2.14",
+    "prismjs": "1.17.1",
+    "react": "16.9.0",
+    "react-dom": "16.9.0",
+    "react-helmet": "5.2.1",
+    "styled-components": "4.3.2"
   },
   "devDependencies": {
-    "prettier": "^1.18.2"
+    "prettier": "1.18.2"
   },
   "license": "MIT",
   "scripts": {
